pretty much done

--- a/index.html
+++ b/index.html
@@ -1,4 +1,62 @@
-<html>
-	
+<!doctype html>
 
+<html lang="en">
+<head>
+  	<meta charset="utf-8">
+
+  	<title>:(</title>
+  	<meta name="description" content="a national tragedy">
+  	<meta name="author" content="nick">
+  	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+
+
+  <!--[if lt IE 9]>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+  <![endif]-->
+</head>
+
+<body>
+
+	<div class="donnyj">
+	<div class="donnyj__image">
+		<img class="donnyj__himself" src="imgs/donnyj.png">
+	</div>
+	<div class="donnyj__content">
+		<div class="donnyj__counter">
+			<div class="donnyj__number">
+				0
+			</div>
+			<div class="donnyj__rw-wrapper">
+				<h2 class="donnyj__rw-sentence">
+					days without national
+					<div class="donnyj__rw-words donnyj__rw-words-1">
+						<span>embarassment</span>
+						<span>disgrace</span>
+						<span>tragedy</span>
+						<span>farce</span>
+						<span>shame</span>
+						<span>humiliation</span>
+					</div>
+				</h2>
+			</div>
+			<div class="donnyj__source">
+				<div class="donnyj__source-container">
+					<blockquote class="twitter-tweet donnyj__source-container" data-lang="en"><p lang="en" dir="ltr">Intelligence agencies should never have allowed this fake news to &quot;leak&quot; into the public. One last shot at me.Are we living in Nazi Germany?</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/819164172781060096">January 11, 2017</a></blockquote>
+					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+				</div>
+			</div>
+			<div class="donnyj__comments">
+				<div class="donnyj__comments-title"> Comments: </div>
+				<div class="donnyj__comments-text">
+					The <a href="https://en.wikipedia.org/wiki/Sicherheitsdienst#Tasks_and_general_structure" target="_blank"> point of Nazi intelligence agencies </a> was to spread positive propaganda about their leadership, so exactly the opposite of what Donald is implying.
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+</body>
 </html>
