added favicon and share buttons

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <head>
   	<meta charset="utf-8">
 
-  	<title>:(</title>
+  	<title>Commander-in-Tweet</title>
   	<meta name="description" content="a national tragedy">
-  	<meta name="author" content="nick">
+  	<meta name="author" content="a cuck">
   	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
 
   <!--[if lt IE 9]>
@@ -55,6 +57,10 @@
 			</div>
 		</div>
 	</div>
+	<ul class="share-buttons">
+  		<li><a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fcommander-in-tweet.com&t=Commander-in-tweet" title="Share on Facebook" target="_blank"><img alt="Share on Facebook" src="imgs/Facebook.png"></a></li>
+  		<li><a href="https://twitter.com/intent/tweet?source=http%3A%2F%2Fcommander-in-tweet.com&text=Commander-in-tweet:%20http%3A%2F%2Fcommander-in-tweet.com" target="_blank" title="Tweet"><img alt="Tweet" src="imgs/Twitter.png"></a></li>
+	</ul>
 </div>
 
 
