--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <html lang="en">
 <head>
   	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width" />
+	<meta property="og:image" content="http://commander-in-tweet.com/imgs/donnyj.png" />
 
   	<title>Commander-in-Tweet</title>
   	<meta name="description" content="a national tragedy">
