--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width" />
 	<meta property="og:image" content="http://commander-in-tweet.com/imgs/donnyj.png" />
+	<meta property="og:title" content="Commander-in-tweet" />
+	<meta property="og:url" content="http://commander-in-tweet.com/" />
 
   	<title>Commander-in-Tweet</title>
   	<meta name="description" content="a national tragedy">
