added archive page, did change for today

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   	<title>Commander-in-Tweet</title>
   	<meta name="description" content="a national tragedy">
   	<meta name="author" content="a cuck">
-  	<link rel="stylesheet" href="css/styles.css">
+  	<link rel="stylesheet" href="css/index.css">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
@@ -39,7 +39,10 @@
 
 	<div class="donnyj">
 	<div class="donnyj__image">
-		<img class="donnyj__himself" src="imgs/donnyj.png">
+		<div class="donnyj__image-container">
+			<img class="donnyj__himself" src="imgs/donnyj.png">
+			<a class="donnyj__archive-link" href="archive.html"> Archive </a>
+		</div>
 	</div>
 	<div class="donnyj__content">
 		<div class="donnyj__counter">
@@ -60,15 +63,18 @@
 				</h2>
 			</div>
 			<div class="donnyj__source">
+				<div class="donnyj__date">
+					1/13/17
+				</div>
 				<div class="donnyj__source-container">
-					<blockquote class="twitter-tweet donnyj__source-container" data-lang="en"><p lang="en" dir="ltr">Intelligence agencies should never have allowed this fake news to &quot;leak&quot; into the public. One last shot at me.Are we living in Nazi Germany?</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/819164172781060096">January 11, 2017</a></blockquote>
+					<blockquote class="twitter-tweet donnyj__source-container" data-lang="en"><p lang="en" dir="ltr">Thank you to Linda Bean of L.L.Bean for your great support and courage. People will support you even more now. Buy L.L.Bean. <a href="https://twitter.com/LBPerfectMaine">@LBPerfectMaine</a></p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/819541997325316096">January 12, 2017</a></blockquote>
 					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
 			</div>
 			<div class="donnyj__comments">
 				<div class="donnyj__comments-title"> Comments: </div>
 				<div class="donnyj__comments-text">
-					The <a href="https://en.wikipedia.org/wiki/Sicherheitsdienst#Tasks_and_general_structure" target="_blank"> point of Nazi intelligence agencies </a> was to spread positive propaganda about their leadership, so exactly the opposite of what Donald is implying.
+					Just the president-elect picking winners and losers in the free market via twitter.
 				</div>
 			</div>
 		</div>
