changed some text

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<div class="donnyj__comments">
 				<div class="donnyj__comments-title"> Comments: </div>
 				<div class="donnyj__comments-text">
-					The president-elect picking winners and losers in the free market via twitter.
+					The president-elect picking winners and losers in the free market via twitter.  Surely, he won't have any conflicts of interest.
 				</div>
 			</div>
 		</div>
