--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<div class="donnyj__comments">
 				<div class="donnyj__comments-title"> Comments: </div>
 				<div class="donnyj__comments-text">
-					Spelling mistakes are low hanging fruit, equally as easy to mock, as they are to avoid.
+					Grammatical mistakes are low hanging fruit, equally as easy to mock, as they are to avoid.
 				</div>
 			</div>
 		</div>
