--- a/archive.html
+++ b/archive.html
@@ -41,6 +41,15 @@
 		<div class="archive__back">
 			<a href="/"> Back </a>
 		</div>
+		<div class="archive_source">
+			<div class="archive_date">
+				1/13/17
+			</div>
+			<div class="archive_source-container">
+				<blockquote class="twitter-tweet archive_source-container" data-lang="en"><p lang="en" dir="ltr">All of my Cabinet nominee are looking good and doing a great job. I want them to be themselves and express their own thoughts, not mine!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/819858926455967744">January 13, 2017</a></blockquote>
+				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+			</div>
+		</div>
 		<div class="archive__source">
 			<div class="archive__date">
 				1/12/17
