--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 			</div>
 			<div class="donnyj__source">
 				<div class="donnyj__date">
-					1/13/17
+					1/14/17
 				</div>
 				<div class="donnyj__source-container">
-					<blockquote class="twitter-tweet donnyj__source-container" data-lang="en"><p lang="en" dir="ltr">All of my Cabinet nominee are looking good and doing a great job. I want them to be themselves and express their own thoughts, not mine!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/819858926455967744">January 13, 2017</a></blockquote>
+					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">INTELLIGENCE INSIDERS NOW CLAIM THE TRUMP DOSSIER IS &quot;A COMPLETE FRAUD!&quot;  <a href="https://twitter.com/OANN">@OANN</a></p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/820257714362314753">January 14, 2017</a></blockquote>
 					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
 			</div>
