--- a/archive.html
+++ b/archive.html
@@ -41,6 +41,15 @@
 		<div class="archive__back">
 			<a href="/"> Back </a>
 		</div>
+		<div class="archive__source">
+			<div class="archive__date">
+				1/14/17
+			</div>
+			<div class="archive__source-container">
+				<blockquote class="twitter-tweet archive__source" data-lang="en"><p lang="en" dir="ltr">INTELLIGENCE INSIDERS NOW CLAIM THE TRUMP DOSSIER IS &quot;A COMPLETE FRAUD!&quot;  <a href="https://twitter.com/OANN">@OANN</a></p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/820257714362314753">January 14, 2017</a></blockquote>
+				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+			</div>
+		</div>
 		<div class="archive_source">
 			<div class="archive_date">
 				1/13/17
