--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
 					1/14/17
 				</div>
 				<div class="donnyj__source-container">
-					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">INTELLIGENCE INSIDERS NOW CLAIM THE TRUMP DOSSIER IS &quot;A COMPLETE FRAUD!&quot;  <a href="https://twitter.com/OANN">@OANN</a></p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/820257714362314753">January 14, 2017</a></blockquote>
+					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">The Democrats are most angry that so many Obama Democrats voted for me. With all of the jobs I am bringing back to our Nation, that number..</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/820631495660408835">January 15, 2017</a></blockquote>
 					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
 			</div>
 			<div class="donnyj__comments">
 				<div class="donnyj__comments-title"> Comments: </div>
 				<div class="donnyj__comments-text">
-					Grammatical mistakes are low hanging fruit, equally as easy to mock, as they are to avoid.
+					Most angry, the Obama Demoncrats are. 
 				</div>
 			</div>
 		</div>
