added archive and new image

--- a/archive.html
+++ b/archive.html
@@ -49,6 +49,12 @@
 				<blockquote class="twitter-tweet archive__source" data-lang="en"><p lang="en" dir="ltr">INTELLIGENCE INSIDERS NOW CLAIM THE TRUMP DOSSIER IS &quot;A COMPLETE FRAUD!&quot;  <a href="https://twitter.com/OANN">@OANN</a></p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/820257714362314753">January 14, 2017</a></blockquote>
 				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 			</div>
+			<div class="archive__comments">
+				<div class="archive__comments-title"> Comments: </div>
+				<div class="archive__comments-text">
+					Caps lock is cruise control for cool.
+				</div>
+			</div>
 		</div>
 		<div class="archive_source">
 			<div class="archive_date">
@@ -57,6 +63,12 @@
 			<div class="archive_source-container">
 				<blockquote class="twitter-tweet archive_source-container" data-lang="en"><p lang="en" dir="ltr">All of my Cabinet nominee are looking good and doing a great job. I want them to be themselves and express their own thoughts, not mine!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/819858926455967744">January 13, 2017</a></blockquote>
 				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+			</div>
+			<div class="archive__comments">
+				<div class="archive__comments-title"> Comments: </div>
+				<div class="archive__comments-text">
+					Grammatical mistakes are low hanging fruit, equally as easy to mock, as they are to avoid.
+				</div>
 			</div>
 		</div>
 		<div class="archive__source">
