--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
 					1/14/17
 				</div>
 				<div class="donnyj__source-container">
-					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">The Democrats are most angry that so many Obama Democrats voted for me. With all of the jobs I am bringing back to our Nation, that number..</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/820631495660408835">January 15, 2017</a></blockquote>
+					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">At 9:00 P.M. <a href="https://twitter.com/CNN">@CNN</a>, of all places, is doing a Special Report on my daughter, Ivanka. Considering it is CNN, can&#39;t imagine it will be great!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/821172595869577220">January 17, 2017</a></blockquote>
 					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
 			</div>
 			<div class="donnyj__comments">
 				<div class="donnyj__comments-title"> Comments: </div>
 				<div class="donnyj__comments-text">
-					Most angry, the Obama Demoncrats are.
+					MLK could've inspired some decency in Mr. Trump, but it was not so.  Not sure to start for this one, it seems like he is simultaneously advertising and dismissing the strangely capitalized special report.
 				</div>
 			</div>
 		</div>
