donald spreading misinformation

--- a/archive.html
+++ b/archive.html
@@ -44,6 +44,22 @@
 
 		<div class="archive__source">
 			<div class="archive__date">
+				1/16/17
+			</div>
+			<div class="archive__source-container">
+				<blockquote class="twitter-tweet archive__source" data-lang="en"><p lang="en" dir="ltr">At 9:00 P.M. <a href="https://twitter.com/CNN">@CNN</a>, of all places, is doing a Special Report on my daughter, Ivanka. Considering it is CNN, can&#39;t imagine it will be great!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/821172595869577220">January 17, 2017</a></blockquote>
+				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+			</div>
+		</div>
+		<div class="archive__comments">
+			<div class="archive__comments-title"> Comments: </div>
+			<div class="archive__comments-text">
+				MLK could've inspired some decency in Mr. Trump, but it was not so.  Not sure to start for this one, it seems like he is simultaneously advertising and dismissing the strangely capitalized special report.
+			</div>
+		</div>
+
+		<div class="archive__source">
+			<div class="archive__date">
 				1/15/17
 			</div>
 			<div class="archive__source-container">
