--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
 			</div>
 			<div class="donnyj__source">
 				<div class="donnyj__date">
-					1/16/17
+					1/17/17
 				</div>
 				<div class="donnyj__source-container">
-					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">At 9:00 P.M. <a href="https://twitter.com/CNN">@CNN</a>, of all places, is doing a Special Report on my daughter, Ivanka. Considering it is CNN, can&#39;t imagine it will be great!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/821172595869577220">January 17, 2017</a></blockquote>
+					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">The same people who did the phony election polls, and were so wrong, are now doing approval rating polls. They are rigged just like before.</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/821344302651555840">January 17, 2017</a></blockquote>
 					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
 			</div>
 			<div class="donnyj__comments">
 				<div class="donnyj__comments-title"> Comments: </div>
 				<div class="donnyj__comments-text">
-					MLK could've inspired some decency in Mr. Trump, but it was not so.  Not sure to start for this one, it seems like he is simultaneously advertising and dismissing the strangely capitalized special report.
+					If, by "so wrong", you meant, <a href="http://www.realclearpolitics.com/epolls/2016/president/us/general_election_trump_vs_clinton_vs_johnson_vs_stein-5952.html"> more accurate than they were in 2012, and 2008 </a>, then you are correct, Donald.  FAKE NEWS!
 				</div>
 			</div>
 		</div>
