--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<div class="donnyj__comments">
 				<div class="donnyj__comments-title"> Comments: </div>
 				<div class="donnyj__comments-text">
-					If, by "so wrong", you meant, <a href="http://www.realclearpolitics.com/epolls/2016/president/us/general_election_trump_vs_clinton_vs_johnson_vs_stein-5952.html"> more accurate than they were in 2012, and 2008 </a>, then you are correct, Donald.  FAKE NEWS!
+					If, by "so wrong", you meant, <a href="http://www.realclearpolitics.com/epolls/2016/president/us/general_election_trump_vs_clinton_vs_johnson_vs_stein-5952.html"> more accurate than they were in 2012, and 2008 </a>, then you are correct, Donald.  Fake news, sad!
 				</div>
 			</div>
 		</div>
