--- a/archive.html
+++ b/archive.html
@@ -44,6 +44,22 @@
 
 		<div class="archive__source">
 			<div class="archive__date">
+				1/17/17
+			</div>
+			<div class="archive__source-container">
+				<blockquote class="twitter-tweet archive__source" data-lang="en"><p lang="en" dir="ltr">The same people who did the phony election polls, and were so wrong, are now doing approval rating polls. They are rigged just like before.</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/821344302651555840">January 17, 2017</a></blockquote>
+				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+			</div>
+		</div>
+		<div class="archive__comments">
+			<div class="archive__comments-title"> Comments: </div>
+			<div class="archive__comments-text">
+				If, by "so wrong", you meant, <a href="http://www.realclearpolitics.com/epolls/2016/president/us/general_election_trump_vs_clinton_vs_johnson_vs_stein-5952.html"> very accurate </a>, then you are correct, Donald.  Fake news, sad!
+			</div>
+		</div>
+
+		<div class="archive__source">
+			<div class="archive__date">
 				1/16/17
 			</div>
 			<div class="archive__source-container">
