--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
 			</div>
 			<div class="donnyj__source">
 				<div class="donnyj__date">
-					1/17/17
+					1/18/17
 				</div>
 				<div class="donnyj__source-container">
-					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">The same people who did the phony election polls, and were so wrong, are now doing approval rating polls. They are rigged just like before.</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/821344302651555840">January 17, 2017</a></blockquote>
+					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">to the U.S., but had nothing to do with TRUMP, is more FAKE NEWS. Ask top CEO&#39;s of those companies for real facts. Came back because of me!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/821699672687448064">January 18, 2017</a></blockquote>
 					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
 			</div>
 			<div class="donnyj__comments">
 				<div class="donnyj__comments-title"> Comments: </div>
 				<div class="donnyj__comments-text">
-					If, by "so wrong", you meant, <a href="http://www.realclearpolitics.com/epolls/2016/president/us/general_election_trump_vs_clinton_vs_johnson_vs_stein-5952.html"> very accurate </a>, then you are correct, Donald.  Fake news, sad!
+					Refers to himself in the third person, in all capital letters, then the President Elect goes on to use a juvenile retort that can't be verified.
 				</div>
 			</div>
 		</div>
