--- a/archive.html
+++ b/archive.html
@@ -42,19 +42,34 @@
 			<a href="/"> Back </a>
 		</div>
 
-		<div class="donnyj__source">
-			<div class="donnyj__date">
+		<div class="archive__source">
+			<div class="archive__date">
+				1/19/17
+			</div>
+			<div class="archive__source-container">
+				<img class="archive__award" src="imgs/trophy.png">
+			</div>
+		</div>
+		<div class="archive__comments">
+			<div class="archive__comments-title"> Comments: </div>
+			<div class="archive__comments-text">
+				He didn't embarass the country today.  Hopefully he can keep it up.
+			</div>
+		</div>
+
+		<div class="archive__source">
+			<div class="archive__date">
 				1/18/17
 			</div>
-			<div class="donnyj__source-container">
-				<!-- <img class="donnyj__award" src="imgs/trophy.png"> -->
-				<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">to the U.S., but had nothing to do with TRUMP, is more FAKE NEWS. Ask top CEO&#39;s of those companies for real facts. Came back because of me!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/821699672687448064">January 18, 2017</a></blockquote>
+			<div class="archive__source-container">
+				<!-- <img class="archive__award" src="imgs/trophy.png"> -->
+				<blockquote class="twitter-tweet archive__source" data-lang="en"><p lang="en" dir="ltr">to the U.S., but had nothing to do with TRUMP, is more FAKE NEWS. Ask top CEO&#39;s of those companies for real facts. Came back because of me!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/821699672687448064">January 18, 2017</a></blockquote>
 				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 			</div>
 		</div>
-		<div class="donnyj__comments">
-			<div class="donnyj__comments-title"> Comments: </div>
-			<div class="donnyj__comments-text">
+		<div class="archive__comments">
+			<div class="archive__comments-title"> Comments: </div>
+			<div class="archive__comments-text">
 				Refers to himself in the third person, in all capital letters, then the President Elect goes on to use a juvenile retort that can't be verified.
 			</div>
 		</div>
