--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<div class="donnyj__content">
 		<div class="donnyj__counter">
 			<div class="donnyj__number">
-				1
+				0
 			</div>
 			<div class="donnyj__rw-wrapper">
 				<h2 class="donnyj__rw-sentence">
@@ -64,18 +64,18 @@
 			</div>
 			<div class="donnyj__source">
 				<div class="donnyj__date">
-					1/19/17
+					1/20/17
 				</div>
 				<div class="donnyj__source-container">
-					<img class="donnyj__award" src="imgs/trophy.png">
-					<!-- <blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">to the U.S., but had nothing to do with TRUMP, is more FAKE NEWS. Ask top CEO&#39;s of those companies for real facts. Came back because of me!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/821699672687448064">January 18, 2017</a></blockquote>
-					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script> -->
+					<!-- <img class="donnyj__award" src="imgs/trophy.png"> -->
+					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">TO ALL AMERICANS🇺🇸<a href="https://t.co/D7Es6ie4fY">https://t.co/D7Es6ie4fY</a></p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/822507434396753921">January 20, 2017</a></blockquote>
+					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
 			</div>
 			<div class="donnyj__comments">
 				<div class="donnyj__comments-title"> Comments: </div>
 				<div class="donnyj__comments-text">
-					He didn't embarass the country today.  Hopefully he can keep it up.
+					The decorum of caps lock and emoji is overwhelming.
 				</div>
 			</div>
 		</div>
