--- a/index.html
+++ b/index.html
@@ -64,18 +64,18 @@
 			</div>
 			<div class="donnyj__source">
 				<div class="donnyj__date">
-					1/20/17
+					1/21/17
 				</div>
 				<div class="donnyj__source-container">
 					<!-- <img class="donnyj__award" src="imgs/trophy.png"> -->
-					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">TO ALL AMERICANS🇺🇸<a href="https://t.co/D7Es6ie4fY">https://t.co/D7Es6ie4fY</a></p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/822507434396753921">January 20, 2017</a></blockquote>
+					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">&quot;Do not allow anyone to tell you that it cannot be done. No challenge can match the HEART and FIGHT and SPIRIT of America.&quot; - <a href="https://twitter.com/POTUS">@POTUS</a> <a href="https://t.co/26JQOY4pk8">pic.twitter.com/26JQOY4pk8</a></p>&mdash; The White House (@WhiteHouse) <a href="https://twitter.com/WhiteHouse/status/822921756734324738">January 21, 2017</a></blockquote>
 					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
 			</div>
 			<div class="donnyj__comments">
 				<div class="donnyj__comments-title"> Comments: </div>
 				<div class="donnyj__comments-text">
-					The decorum of caps lock and emoji is overwhelming.
+					Who gives a fuck about an oxford comma.
 				</div>
 			</div>
 		</div>
