--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 			</div>
 			<div class="donnyj__source">
 				<div class="donnyj__date">
-					1/23/17
+					1/24/17
 				</div>
 				<div class="donnyj__source-container">
-					<img class="donnyj__award" src="imgs/trophy.png">
-					<!-- <blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">Watched protests yesterday but was under the impression that we just had an election! Why didn&#39;t these people vote? Celebs hurt cause badly.</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/823150055418920960">January 22, 2017</a></blockquote>
-					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script> -->
+					<!-- <img class="donnyj__award" src="imgs/trophy.png"> -->
+					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">Signing orders to move forward with the construction of the Keystone XL and Dakota Access pipelines in the Oval Office. <a href="https://t.co/OErGmbBvYK">pic.twitter.com/OErGmbBvYK</a></p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/823950814163140609">January 24, 2017</a></blockquote>
+					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
 			</div>
 			<div class="donnyj__comments">
