--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
 				</div>
 				<div class="donnyj__source-container">
 					<!-- <img class="donnyj__award" src="imgs/trophy.png"> -->
-					<blockquote class="twitter-tweet donnyj__source" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">Signing orders to move forward with the construction of the Keystone XL and Dakota Access pipelines in the Oval Office. <a href="https://t.co/OErGmbBvYK">pic.twitter.com/OErGmbBvYK</a></p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/823950814163140609">January 24, 2017</a></blockquote>
+					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">even, those registered to vote who are dead (and many for a long time). Depending on results, we will strengthen up voting procedures!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/824228768227217408">January 25, 2017</a></blockquote>
 					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
 			</div>
 			<div class="donnyj__comments">
 				<div class="donnyj__comments-title"> Comments: </div>
 				<div class="donnyj__comments-text">
-					Gonna have to move the desk then.
+					Allegations of a hacked and compromised election don't matter, but how cold the dead voters are, does matter.
 				</div>
 			</div>
 		</div>
