--- a/archive.html
+++ b/archive.html
@@ -44,6 +44,23 @@
 
 		<div class="archive__source">
 			<div class="archive__date">
+				1/25/17
+			</div>
+			<div class="archive__source-container">
+				<!-- <img class="archive__award" src="imgs/trophy.png"> -->
+				<blockquote class="twitter-tweet archive__source" data-lang="en"><p lang="en" dir="ltr">even, those registered to vote who are dead (and many for a long time). Depending on results, we will strengthen up voting procedures!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/824228768227217408">January 25, 2017</a></blockquote>
+				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+			</div>
+		</div>
+		<div class="archive__comments">
+			<div class="archive__comments-title"> Comments: </div>
+			<div class="archive__comments-text">
+				Allegations of a hacked and compromised election don't matter, but how cold the dead voters are, does matter.
+			</div>
+		</div>
+
+		<div class="archive__source">
+			<div class="archive__date">
 				1/24/17
 			</div>
 			<div class="archive__source-container">
