--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<div class="donnyj__comments">
 				<div class="donnyj__comments-title"> Comments: </div>
 				<div class="donnyj__comments-text">
-					How many times has President Trump called Obama a weak leader?
+					<a href="https://www.theguardian.com/commentisfree/2017/jan/25/compromise-doesnt-work-political-opponents-chelsea-manning">Demonstrably false. </a>  The President is falsely accusing someone of doing something that he himself does with regularity.
 				</div>
 			</div>
 		</div>
