--- a/archive.html
+++ b/archive.html
@@ -42,6 +42,23 @@
 			<a href="/"> Back </a>
 		</div>
 
+		<div class="donnyj__source">
+			<div class="donnyj__date">
+				1/26/17
+			</div>
+			<div class="donnyj__source-container">
+				<!-- <img class="donnyj__award" src="imgs/trophy.png"> -->
+				<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">Ungrateful TRAITOR Chelsea Manning, who should never have been released from prison, is now calling President Obama a weak leader. Terrible!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/824573698774601729">January 26, 2017</a></blockquote>
+				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+			</div>
+		</div>
+		<div class="donnyj__comments">
+			<div class="donnyj__comments-title"> Comments: </div>
+			<div class="donnyj__comments-text">
+				<a href="https://www.theguardian.com/commentisfree/2017/jan/25/compromise-doesnt-work-political-opponents-chelsea-manning">Demonstrably false. </a>  The President is falsely accusing someone of doing something that he himself does with regularity.
+			</div>
+		</div>
+
 		<div class="archive__source">
 			<div class="archive__date">
 				1/25/17
