--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
 				</div>
 				<div class="donnyj__source-container">
 					<!-- <img class="donnyj__award" src="imgs/trophy.png"> -->
-					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">Thr coverage about me in the <a href="https://twitter.com/nytimes">@nytimes</a> and the <a href="https://twitter.com/washingtonpost">@washingtonpost</a> gas been so false and angry that the times actually apologized to its.....</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/825329757646618624">January 28, 2017</a></blockquote>
+					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">I call my own shots, largely based on an accumulation of data, and everyone knows it. Some FAKE NEWS media, in order to marginalize, lies!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/828575949268606977">February 6, 2017</a></blockquote>
 					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
 			</div>
 			<div class="donnyj__comments">
 				<div class="donnyj__comments-title"> Comments: </div>
 				<div class="donnyj__comments-text">
-					Gas so false and angry.
+					Donald needs to reassure us that he is a big boy, and makes his own decisions.  His claims to use data are very suspect, as climate change skeptics tend to ignore data.
 				</div>
 			</div>
 		</div>
