--- a/index.html
+++ b/index.html
@@ -64,18 +64,18 @@
 			</div>
 			<div class="donnyj__source">
 				<div class="donnyj__date">
-					2/7/17
+					2/8/17
 				</div>
 				<div class="donnyj__source-container">
 					<!-- <img class="donnyj__award" src="imgs/trophy.png"> -->
-					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">I don&#39;t know Putin, have no deals in Russia, and the haters are going crazy - yet Obama can make a deal with Iran, #1 in terror, no problem!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/828939235499638784">February 7, 2017</a></blockquote>
+					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">If the U.S. does not win this case as it so obviously should, we can never have the security and safety to which we are entitled. Politics!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/829299566344359936">February 8, 2017</a></blockquote>
 					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
 			</div>
 			<div class="donnyj__comments">
 				<div class="donnyj__comments-title"> Comments: </div>
 				<div class="donnyj__comments-text">
-					Where to begin?  President Trump has stated <a href="http://www.politifact.com/truth-o-meter/statements/2016/aug/01/donald-trump/donald-trump-gets-full-flop-whether-hes-had-relati/"> multiple times</a> he does know Putin.  He <a href="http://time.com/4433880/donald-trump-ties-to-russia/">does</a> have deals in Russia.  The haters are going crazy.  Iran number #1 in terror, according to what?
+					While not understanding how the government, of which he is the head of, works, President Trump also seems suprises that there are politics, in politics.
 				</div>
 			</div>
 		</div>
