--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<div class="donnyj__comments">
 				<div class="donnyj__comments-title"> Comments: </div>
 				<div class="donnyj__comments-text">
-					While not understanding how the government, of which he is the head of, works, President Trump also seems suprises that there are politics, in politics.
+					While not understanding how the government, of which he is the head of, works, President Trump also seems suprised that there are politics, in politics.
 				</div>
 			</div>
 		</div>
