--- a/archive.html
+++ b/archive.html
@@ -42,6 +42,23 @@
 			<a href="/"> Back </a>
 		</div>
 
+		<div class="archive__source">
+			<div class="archive__date">
+				2/8/17
+			</div>
+			<div class="archive__source-container">
+				<!-- <img class="archive__award" src="imgs/trophy.png"> -->
+				<blockquote class="twitter-tweet archive__source" data-lang="en"><p lang="en" dir="ltr">If the U.S. does not win this case as it so obviously should, we can never have the security and safety to which we are entitled. Politics!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/829299566344359936">February 8, 2017</a></blockquote>
+				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+			</div>
+		</div>
+		<div class="archive__comments">
+			<div class="archive__comments-title"> Comments: </div>
+			<div class="archive__comments-text">
+				While not understanding how the government, of which he is the head of, works, President Trump also seems suprised that there are politics, in politics.
+			</div>
+		</div>
+
 		<div class="acrhive__source">
 			<div class="acrhive__date">
 				2/7/17
