--- a/index.html
+++ b/index.html
@@ -64,18 +64,18 @@
 			</div>
 			<div class="donnyj__source">
 				<div class="donnyj__date">
-					2/8/17
+					2/9/17
 				</div>
 				<div class="donnyj__source-container">
 					<!-- <img class="donnyj__award" src="imgs/trophy.png"> -->
-					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">If the U.S. does not win this case as it so obviously should, we can never have the security and safety to which we are entitled. Politics!</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/829299566344359936">February 8, 2017</a></blockquote>
+					<blockquote class="twitter-tweet donnyj__source" data-lang="en"><p lang="en" dir="ltr">Sen. McCain should not be talking about the success or failure of a mission to the media. Only emboldens the enemy! He&#39;s been losing so....</p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/829682794951475200">February 9, 2017</a></blockquote>
 					<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
 			</div>
 			<div class="donnyj__comments">
 				<div class="donnyj__comments-title"> Comments: </div>
 				<div class="donnyj__comments-text">
-					While not understanding how the government, of which he is the head of, works, President Trump also seems suprised that there are politics, in politics.
+					Another day, another war hero to insult.
 				</div>
 			</div>
 		</div>
